# omnibot_ros

./: CMakeLists.txt  Dockerfile  README.md  omnibot.xml  package.xml  setup.cfg  setup.py
bringup/config/: omnibot_controllers.yaml
bringup/launch/: omnibot_controllers.launch.py
description/meshes/: omnibot.stl
description/ros2_control/: omnibot_control.urdf.xacro
description/urdf/: omnibot.urdf.xacro  omnibot_body.urdf.xacro
hardware/: omnibot_system.cpp
hardware/include/omnibot/: omnibot_system.hpp  visibility_control.h
launch/: description.launch.py
omnibot/: firmware.py  omnibot.py
urdf/: omnibot.urdf.xacro
